@@ -27,3 +27,4 @@ docker
 vignettes/Makefile
 vignettes/rmd
 \.github
+^issue.*\.md
